--- a/app/src/main/res/layout/activity_registration_page.xml
+++ b/app/src/main/res/layout/activity_registration_page.xml
@@ -12,40 +12,40 @@
         android:id="@+id/form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Registration Form"
+        android:text="Create Account"
         android:textSize="20dp"
         android:textStyle="bold"
         android:textAlignment="center"
         android:layout_margin="20dp"
         />
 
-    <EditText
-        android:id="@+id/name"
-        android:layout_below="@id/form"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Name"
-        android:textColorHint="@color/white"
-        android:layout_margin="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <EditText
-        android:id="@+id/age"
-        android:layout_below="@id/name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Age"
-        android:textColorHint="@color/white"
-        android:layout_margin="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <EditText-->
+<!--        android:id="@+id/name"-->
+<!--        android:layout_below="@id/form"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:hint="Name"-->
+<!--        android:textColorHint="@color/white"-->
+<!--        android:layout_margin="10dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
+<!--    <EditText-->
+<!--        android:id="@+id/age"-->
+<!--        android:layout_below="@id/name"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:hint="Age"-->
+<!--        android:textColorHint="@color/white"-->
+<!--        android:layout_margin="10dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
     <EditText
         android:id="@+id/email"
-        android:layout_below="@id/age"
+        android:layout_below="@id/form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
@@ -61,7 +61,7 @@
         android:layout_below="@id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Phone"
+        android:hint="Phone/Password"
         android:textColorHint="@color/white"
         android:layout_margin="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -69,23 +69,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/phone"
-        />
+<!--    <ImageView-->
+<!--        android:id="@+id/image"-->
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:layout_centerInParent="true"-->
+<!--        android:layout_below="@id/phone"-->
+<!--        />-->
 
 
-    <TextView
-        android:id="@+id/select_img"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Select Image"
-        android:textAlignment="center"
-        android:layout_below="@+id/image"
-        />
+<!--    <TextView-->
+<!--        android:id="@+id/select_img"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Select Image"-->
+<!--        android:textAlignment="center"-->
+<!--        android:layout_below="@+id/image"-->
+<!--        />-->
 
     <Button
         android:id="@+id/signup"
@@ -93,7 +93,7 @@
         android:layout_height="wrap_content"
         android:text="SIGN UP"
         android:layout_margin="20dp"
-        android:layout_below="@+id/select_img"
+        android:layout_below="@+id/phone"
         />
 
     <RelativeLayout
