--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -5,13 +5,25 @@
     android:layout_height="match_parent"
     tools:context=".PostFragment">
 
+    <TextView
+        android:id="@+id/form"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Regestrarion Form"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+       android:layout_marginTop="70dp"
+        />
+
     <ImageView
         android:id="@+id/image_upload"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="120dp"
+        android:layout_below="@+id/form"
         android:foregroundGravity="center" />
 
     <TextView
@@ -27,13 +39,33 @@
         android:layout_below="@+id/image_upload"
         />
 
+    <EditText
+            android:id="@+id/name"
+            android:layout_below="@id/select_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Name"
+            android:textColorHint="@color/white"
+            android:layout_margin="10dp"
+
+           />
+        <EditText
+            android:id="@+id/age"
+            android:layout_below="@id/name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Age"
+            android:textColorHint="@color/white"
+            android:layout_margin="10dp"
+           />
+
     <Button
         android:id="@+id/upload_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="UPLOAD"
         android:textColorHint="@color/white"
-        android:layout_below="@id/select_image"
+        android:layout_below="@id/age"
         android:layout_margin="20dp"
         android:layout_centerInParent="true"
         />
