--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,10 +5,29 @@
     android:layout_height="match_parent"
     tools:context=".HomeFragment">
 
-    <ListView
-        android:id="@+id/list_item"
+    <ImageView
+        android:id="@+id/rImage"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/people_24"
+        android:layout_marginTop="20dp" />
+
+    <TextView
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+        android:layout_below="@+id/rImage"
+        android:layout_margin="10dp"
+        android:textSize="20dp"
+        />
+    <TextView
+        android:id="@+id/age"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rImage"
+        android:layout_margin="10dp"
+        android:textSize="20dp"
+        />
 
-        </RelativeLayout>
+</RelativeLayout>
